# rust-game-engine

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
controlset-derive/: Cargo.toml
controlset-derive/src/: lib.rs
res/shaders/: basic.wgsl  blur.wgsl  default.frag  default.vert  default.wgsl  deferred_lighting.wgsl  depth_only.wgsl  flat.wgsl  forward.wgsl  geometry.wgsl  global.wgsl  inputs.wgsl  lighting.wgsl  model.frag  model.vert  model.wgsl  picking.wgsl  shadow_map.wgsl  ssao.wgsl  ssao_blur.wgsl  ssao_from_depth.wgsl  text.frag  text.vert  text.wgsl
res/sprites/: crosshair.aseprite  guy.aseprite
shadertype-derive/: Cargo.toml
shadertype-derive/src/: lib.rs
src/: app.rs  assets.rs  atlas.rs  batcher.rs  camera.rs  color.rs  default_shader.rs  display.rs  font.rs  geom.rs  inputs.rs  lib.rs  main.rs  mesh.rs  mesh_manager.rs  model.rs  model_shader.rs  renderer.rs  resource_manager.rs  resources.rs  shader.rs  sprite.rs  sprite_manager.rs  text_shader.rs  texture.rs  time.rs  transform.rs
src/input/: axis.rs  binding.rs  builders.rs  button.rs  cursor.rs  inputs.rs  manager.rs  mod.rs
src/renderer/: deferred_lighting.rs  display.rs  egui.rs  forward.rs  geometry.rs  instance.rs  lighting.rs  mesh.rs  mod.rs  model.rs  picking.rs  pipeline.rs  render_target.rs  renderer.rs  shader.rs  shader_type.rs  shaders.rs  shadow_mapping.rs  sprite_renderer.rs  ssao.rs  ssao_from_depth.rs  state.rs  text.rs  texture.rs
