[package]
name = "rust-game-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitmask-enum = "2.1.0"
cfg-if = "1"
bytemuck = { version = "1.12", features = ["derive"] }
derive_more = "0.99.17"
glam = { version = "0.23.0", features = ["scalar-math", "bytemuck"] }
glob = "0.3.1"
pollster = "0.2"
itertools = "0.12"
asefile = { version = "0.3", features = ["utils"] }
notify = "5.1.0"
rand = "0.8.5"
tobj = "3.2"
msdfgen = "0.2.1"
ttf-parser = "0.18"
log = "0.4.19"
wgpu = "0.19.3"
winit = {  version = "0.29.2", features = ["rwh_05"] }
slotmap = "1.0.7"

controlset-derive = { path = "controlset-derive" }
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"


[dependencies.image]
version = "0.23.1"
default-features = false
features = ["png", "jpeg", "tga"]

[dependencies.getrandom]
features = ["js"]

[dev-dependencies]

[profile.dev.package.asefile]
opt-level = 2  # or 3
