[package]
name = "rust-game-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitmask-enum = "2.1.0"
cfg-if = "1"
bytemuck = { version = "1.12", features = ["derive"] }
derive_more = "0.99.17"
encase = { version = "0.10.0", features = ["glam"] }
env_logger = "0.11.5"
getrandom = "0.3.1"
glam = { version = "0.29.2", features = ["scalar-math", "bytemuck"] }
glob = "0.3.1"
pollster = "0.2"
itertools = "0.12"
asefile = { version = "0.3", features = ["utils"] }
notify = "5.1.0"
rand = "0.8.5"
tobj = { version = "3.2", features = ["log"] }
msdfgen = "0.2.1"
ttf-parser = "0.18"
log = "0.4.19"
wgpu = "23.0.0"
winit = {  version = "0.30.5", features = ["rwh_05"] }
slotmap = "1.0.7"

controlset-derive = { path = "controlset-derive" }
egui = { git = "https://github.com/emilk/egui.git", rev = "c86d0e59185d2796de4c72081f9431a7de12436a" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "c86d0e59185d2796de4c72081f9431a7de12436a" }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "c86d0e59185d2796de4c72081f9431a7de12436a" }


[dependencies.image]
version = "0.23.1"
default-features = false
features = ["png", "jpeg", "tga"]

[build-dependencies]
generate-wgsl-oil = { git = "https://github.com/ktravis/generate-wgsl-oil", features = ["bytemuck", "glam", "prettyplease"] }

[profile.dev.package.asefile]
opt-level = 2  # or 3
